[workspace]
resolver = "2"
members = [
    "crates/wharfkit-common",
    "crates/wharfkit-abicache",
    "crates/wharfkit-contract",
    "crates/wharfkit-buoy-client",
    "crates/wharfkit-signing-request",
    "crates/wharfkit-session",
    "crates/wharfkit-mock",
    "crates/wharfkit-wallet-plugin-anchor",
    "crates/wharfkit-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.75"
authors = ["Aaron Cox <aaron@greymass.com>"]
license = "AGPL-3.0-or-later"
homepage = "https://github.com/wharfkit/wharfkit-rs"
repository = "https://github.com/wharfkit/wharfkit-rs"
keywords = ["antelope", "wharfkit", "telos", "wax", "vaulta"]

[workspace.dependencies]
antelope-client = "0.3.1"
async-trait = "0.1"
dashmap = "6"
log = "0.4"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "sync"] }

# Internal cross-crate refs
wharfkit-common = { version = "0.1.0", path = "crates/wharfkit-common" }
wharfkit-abicache = { version = "0.1.0", path = "crates/wharfkit-abicache" }
wharfkit-buoy-client = { version = "0.1.0", path = "crates/wharfkit-buoy-client" }
wharfkit-contract = { version = "0.1.0", path = "crates/wharfkit-contract" }
wharfkit-signing-request = { version = "0.1.0", path = "crates/wharfkit-signing-request" }
wharfkit-session = { version = "0.1.0", path = "crates/wharfkit-session" }
wharfkit-mock = { version = "0.1.0", path = "crates/wharfkit-mock" }
wharfkit-wallet-plugin-anchor = { version = "0.1.0", path = "crates/wharfkit-wallet-plugin-anchor" }

[patch.crates-io]
# Use the local fork of antelope-rs until our P0 patches land upstream.
antelope-client = { path = "../antelope-rs/crates/antelope" }
