[package]
name = "wharfkit-abicache"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "ABI cache for WharfKit Rust"

[dependencies]
antelope-client = { workspace = true }
async-trait = { workspace = true }
dashmap = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
serde_json = { workspace = true }
