[package]
name = "wharfkit-common"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Shared types for WharfKit Rust: ChainDefinition, Chains namespace, TokenIdentifier"

[dependencies]
antelope-client = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
