[package]
name = "wharfkit-mock"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "Test infrastructure for wharfkit-rs"
publish = false

[dependencies]
antelope-client = { workspace = true }
async-trait = { workspace = true }
axum = "0.7"
serde_json = { workspace = true }
tokio = { workspace = true }
tokio-util = { version = "0.7", features = ["rt"] }
wharfkit-buoy-client = { workspace = true }
wharfkit-session = { workspace = true }
wharfkit-signing-request = { workspace = true }
