[package]
name = "wharfkit-session"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WharfKit Session — SessionKit, Session, WalletPlugin/UserInterface traits, orchestration"

[dependencies]
antelope-client = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
wharfkit-abicache = { workspace = true }
wharfkit-buoy-client = { workspace = true }
wharfkit-common = { workspace = true }
wharfkit-signing-request = { workspace = true }

[dev-dependencies]
wharfkit-mock = { workspace = true }
