[package]
name = "wharfkit-signing-request"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WharfKit ESR (EOSIO Signing Request) Rust port"

[dependencies]
antelope-client = { workspace = true }
base64 = "0.22"
miniz_oxide = "0.7"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
uuid = { version = "1", features = ["v4"] }
wharfkit-abicache = { workspace = true }

[dev-dependencies]
hex = "0.4"
tokio = { workspace = true }
