[package]
name = "wharfkit-wallet-plugin-anchor"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
description = "WharfKit Anchor wallet plugin"

[dependencies]
antelope-client = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
k256 = { version = "0.13", features = ["ecdsa"] }
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
wharfkit-buoy-client = { workspace = true }
wharfkit-session = { workspace = true }
wharfkit-signing-request = { workspace = true }

[dev-dependencies]
wharfkit-abicache = { workspace = true }
wharfkit-common = { workspace = true }
wharfkit-mock = { workspace = true }
